dark mode bug fix

--- a/static/css/diello.css
+++ b/static/css/diello.css
@@ -449,6 +449,19 @@ body.dark-theme .dark-toggler:hover {
 }
 
 @media (prefers-color-scheme: dark) {
+    html, body {
+        margin              : 0;
+        padding             : 0;
+        font-family         : Nunito;
+        font-size           : 18px;
+        color               : #ccc;
+        line-height         : 200%;
+        background-color    : #000;
+        width               : 100vw;
+        max-width           : 100vw;
+        overflow-x          : hidden;
+    }
+
     h1 {
         font-family         : Nunito;
         font-size           : 30px;
